--- a/Weather Search.html
+++ b/Weather Search.html
@@ -12,8 +12,39 @@
 <body>
     <div class="container">
     <h1>
-        Looking
+        New York
     </h1>
+    <ul>
+        <li>
+            Friday 05:00
+        </li>
+        <li>
+            Clear
+        </li>
+    </ul>
+    <div class="row">
+        <div class="col-6">
+            ☀️12°C |°F
+        </div>
+        <div class="col-6">
+            <ul>
+                <li>
+                    Precipitation: 0%
+                </li>
+                <li>
+                    Humidity: 60%
+                </li>
+                <li>
+                    Wind: 2km/h
+                </li>
+            </ul>
+        </div>
+    </div>
+    <small>
+        <a href="https://github.com/teapotpiggy/Vanilla-Weather-App">
+            Open Source Code
+        </a>
+    </small>
     </div>
     <script src="src/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
