--- a/Weather Search.html
+++ b/Weather Search.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="src/style.css"/>
 </head>
 <body>
-    <div class="container">
+<div class="container">
+    <div class="weather-app">
     <h1>
         New York
     </h1>
@@ -40,6 +41,7 @@
             </ul>
         </div>
     </div>
+</div>
     <small>
         <a href="https://github.com/teapotpiggy/Vanilla-Weather-App">
             Open Source Code
