--- a/Weather Search.html
+++ b/Weather Search.html
@@ -10,44 +10,53 @@
     <link rel="stylesheet" href="src/style.css"/>
 </head>
 <body>
-<div class="container">
-    <div class="weather-app">
-    <h1>
-        New York
-    </h1>
-    <ul>
-        <li>
-            Friday 05:00
-        </li>
-        <li>
-            Clear
-        </li>
-    </ul>
-    <div class="row">
-        <div class="col-6">
-            ☀️12°C |°F
-        </div>
-        <div class="col-6">
-            <ul>
-                <li>
-                    Precipitation: 0%
-                </li>
-                <li>
-                    Humidity: 60%
-                </li>
-                <li>
-                    Wind: 2km/h
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+    <div class="container">
+        <div class="weather-app-wrapper">
+            <div class="weather-app">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                            <input type="search" placeholder="Type a city.." class="form-control" id="city-input"
+                                autocomplete="off" />
+                        </div>
+                        <div class="col-3">
+                            <input type="submit" value="Search" class="btn btn-primary w-100" />
+                        </div>
+                    </div>
+                </form>
+                <div class="overview">
+                    <h1 id="city">New York</h1>
+                    <ul>
+                        <li>Last updated: <span id="date">Friday 05:00</span></li>
+                        <li id="description">Clear</li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="clearfix weather-temperature">
+                            <span id="icon" class="float-left" >
+                            <div class="float-left">
+                                <strong id="temperature">☀️ 12</strong>
+                            </span>
+                                <span class="units"> °C</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <ul>
+                            <li>Humidity: 60<span id="humidity"></span>%</li>
+                            <li>Wind: 10<span id="wind"></span> km/h</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="weather-forecast" id="forecast"></div>
+            </div>
     <small>
         <a href="https://github.com/teapotpiggy/Vanilla-Weather-App">
             Open Source Code
         </a>
     </small>
-    </div>
+</div>
     <script src="src/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
