--- a/Weather Search.html
+++ b/Weather Search.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -25,7 +26,7 @@
                     </div>
                 </form>
                 <div class="overview">
-                    <h1 id="city">New York</h1>
+                    <h1 id="city">Lagos</h1>
                     <ul>
                         <li>Last updated: <span id="date">Friday 05:00</span></li>
                         <li id="description">Clear</li>
@@ -44,6 +45,7 @@
                     </div>
                     <div class="col-6">
                         <ul>
+                            <li>Precipitation: 3%</li>
                             <li>Humidity: 60<span id="humidity"></span>%</li>
                             <li>Wind: 10<span id="wind"></span> km/h</li>
                         </ul>
