--- a/Weather Search.html
+++ b/Weather Search.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Search</title>
-    <link rel="stylesheet" href="src/style.css"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
 </head>
+
 <body>
     <div class="container">
         <div class="weather-app-wrapper">
@@ -26,42 +29,39 @@
                     </div>
                 </form>
                 <div class="overview">
-                    <h1 id="city">Lagos</h1>
+                    <h1 id="city"></h1>
                     <ul>
-                        <li>Last updated: <span id="date">Friday 05:00</span></li>
-                        <li id="description">Clear</li>
+                        <li>Last updated: <span id="date"></span></li>
+                        <li id="description"></li>
                     </ul>
                 </div>
                 <div class="row">
                     <div class="col-6">
                         <div class="clearfix weather-temperature">
-                            <span id="icon" class="float-left" >
+                            <img src="" alt="Clear" id="icon" class="float-left" />
                             <div class="float-left">
-                                <strong id="temperature">☀️ 12</strong>
-                            </span>
-                                <span class="units"> °C</span>
+                                <strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link"
+                                        class="active">°C</a> |
+                                    <a href="#" id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
                     </div>
                     <div class="col-6">
                         <ul>
-                            <li>Precipitation: 3%</li>
-                            <li>Humidity: 60<span id="humidity"></span>%</li>
-                            <li>Wind: 10<span id="wind"></span> km/h</li>
+                            <li>Humidity: <span id="humidity"></span>%</li>
+                            <li>Wind: <span id="wind"></span> km/h</li>
                         </ul>
                     </div>
                 </div>
                 <div class="weather-forecast" id="forecast"></div>
             </div>
-    <small>
-        <a href="https://github.com/teapotpiggy/Vanilla-Weather-App">
-            Open Source Code
-        </a>
-    </small>
-</div>
+            <small>
+                <a href="https://github.com/wecodeschool/vanilla-weather-app" target="_blank">Open-source code</a>
+                by Matt Delac
+            </small>
+        </div>
+    </div>
     <script src="src/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
 </body>
+
 </html>
