--- a/Weather Search.html
+++ b/Weather Search.html
@@ -57,7 +57,7 @@
             </div>
             <small>
                 <a href="https://github.com/wecodeschool/vanilla-weather-app" target="_blank">Open-source code</a>
-                by Matt Delac
+                by Neshia
             </small>
         </div>
     </div>
